Deploy presell for collagenselect

--- a/collagenselect/index.html
+++ b/collagenselect/index.html
@@ -5,12 +5,12 @@
   <!-- Preload imagens de fundo para melhorar LCP -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Get yours today and enjoy faster results, improved convenience and enhanced performance. Secure your purchase now and experience the difference
+  <meta name="description" content="Discover amazing benefits and elevate your life with our product. Buy now and experience the convenience, quality, and value you deserve
 " />
-          <meta name="keywords" content="Collagen Select" />
+          <meta name="keywords" content="collagen select" />
           <meta name="robots" content="noindex, nofollow">
           <meta http-equiv="Content-Language" content="en">
-  <title>Collagen Select</title>
+  <title>collagen select</title>
   <style>
     /* Estilos gerais */
   body, html {
