Deploy presell for flexomore

--- a/flexomore/index.html
+++ b/flexomore/index.html
@@ -5,12 +5,8 @@
   <!-- Preload imagens de fundo para melhorar LCP -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Aqui estão algumas opções para a meta descrição, focadas em benefícios genéricos e aquisição do produto, sem palavras sensíveis:
-
-*   Get yours now and enjoy faster results, improved experience, and a reliable product guaranteed to satisfy
-*   Buy now and unlock premium features, durable construction, and enhance your daily life with our product
-*   Order today and take advantage of a limited time offer, easy to use design, and dependable performance
-*   Shop now and discover the difference quality makes, plus excellent value, and peace of mind with your purchase" />
+  <meta name="description" content="Get yours now and enjoy exclusive benefits. Purchase this fantastic product today for convenience and satisfaction. Don't miss out
+" />
           <meta name="keywords" content="Flexomore" />
           <meta name="robots" content="noindex, nofollow">
           <meta http-equiv="Content-Language" content="en">
